--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.52;
     color: #717f86;
     font-size: 16px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: roboto, 'Open Sans', sans-serif;
     font-weight: 400;
 }
 ol, ul {
@@ -37,16 +37,16 @@ h1, h2, h3, h4, h5, h6{
     color: #4B4B4C;
 }
 a{
-    color: #5fcf80;
+    color: #EC4C4C;
 }
 a:hover, a:focus{
-    color: #5fcf80;
+    color: #EC4C4C;
 }
 /***********************************
 Navigation bar
 ************************************/
 .navbar-default .navbar-brand {
-    color: #5FCF80;
+    color: #EC4C4C;
 }
 .navbar-default {
     background-color: #ffffff;
@@ -66,25 +66,25 @@ Navigation bar
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover
 {
-	color: #5FCF80;
+	color: #EC4C4C;
 }
 
 .navbar-nav .active a{
     background: none !important;
-    color: #5FCF80 !important;
+    color: #EC4C4C !important;
     outline: none;
 }
 
 .btn-trial a{
-	background-color: #5FCF80;
+	background-color: #EC4C4C;
 	border-radius: 25px;
 	color: #ffffff !important;
-	border: 1px solid #5FCF80;
+	border: 1px solid #EC4C4C;
 }
 .btn-trial a:hover, .btn-trial a:focus{
-	border: 1px solid #5FCF80;
+	border: 1px solid #EC4C4C;
 	background-color: #fff;
-	color: #5FCF80 !important;
+	color: #EC4C4C !important;
 }
 .navbar-default .navbar-brand {
     font-family: 'Dosis', sans-serif !important;
@@ -128,7 +128,7 @@ Banner
     color: #fff;
 }
 .text-border{
-	border: 5px solid #5FCF80;
+	border: 5px solid #EC4C4C;
 	display: inline-block;
 	margin-top: 150px;
 }
@@ -139,7 +139,7 @@ Banner
 	margin-top: 30px;
 }
 .quote .btn{
-    background-color: 
+    background-color:
 }
 .modal-dialog {
     width: 600px;
@@ -187,7 +187,7 @@ Banner
     top:10px;
     margin-left: -2.5px;
     transition:all 0.3s ease-in;
- 
+
      -webkit-animation-name: rotateplane; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 2s; /* Chrome, Safari, Opera */
     animation-name: rotateplane;
@@ -220,7 +220,7 @@ Banner
     font-size: 16px;
 }
 .quote .btn{
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
     color: #fff;
     -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -229,7 +229,7 @@ Banner
 }
 .quote .btn:hover, .quote .btn:focus{
     background-color: #fff;
-    color: #5fcf80;
+    color: #EC4C4C;
     border-color: #fff;
      -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -258,7 +258,7 @@ h2{
 }
 .fea i {
     font-size: 39px;
-    color: #5FCF80;
+    color: #EC4C4C;
     margin-top: 7px;
 }
 .heading h4 {
@@ -280,7 +280,7 @@ h2{
 }
 .orga-stru
 {
-    background-color: #5FCF80;
+    background-color: #EC4C4C;
     width: 109px;
     height: auto;
     padding: 10px 10px 25px 10px;
@@ -314,7 +314,7 @@ h3.det-txt {
     text-transform: uppercase;
 }
 h4.sm-txt {
-    color: #5FCF80;
+    color: #EC4C4C;
     font-size: 24px;
 }
 p.det-p {
@@ -345,7 +345,7 @@ Cta
     min-width: 280px;
     margin-left: -4px;
     margin-bottom: 2px;
-    border: 1px solid #5fcf80;
+    border: 1px solid #EC4C4C;
     background-color: rgb(247, 247, 247);
     border-radius: 30px 0px 0px 30px;
 }
@@ -353,7 +353,7 @@ Cta
     font-size: 18px;
     text-transform: capitalize;
     color: #fff;
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
     border: 2px solid #fff;
     padding: 14px 30px;
     margin-left: -4px;
@@ -376,7 +376,7 @@ Work Shop
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
 }
 .icon-box i {
-    color: #5FCF80;
+    color: #EC4C4C;
     font-size: 65px;
 }
 .ser-text {
@@ -435,10 +435,10 @@ Testimonial
 Course
 ************************************/
 [class*=" imghvr-"] figcaption, [class^="imghvr-"] figcaption {
-    background-color: #5FCF80;
+    background-color: #EC4C4C;
 }
 [class*=" imghvr-"], [class^="imghvr-"] {
-    background-color: #5FCF80;
+    background-color: #EC4C4C;
     color: #fff;
 }
 /***********************************
@@ -482,7 +482,7 @@ Price Table
     padding: 20px 0px;
     font-weight: bold !important;
     font-size: 14px;
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
 }
 /***********************************
 Contact Us
@@ -502,7 +502,7 @@ Contact Us
     width: 100%;
 	margin-bottom: 15px;
     border-radius: 0;
-    
+
 }
 .textarea {
     height: 228px;
@@ -600,14 +600,14 @@ Footer
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
 .btn-submit:hover, .btn-submit:focus{
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
     color: #fff;
 }
 .btn-submit{
 	padding: 14px 12px;
 	border-radius: 50px;
 	text-transform: uppercase;
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
     color: #fff;
 }
 .btn-submit i{
@@ -655,7 +655,7 @@ Footer
     padding: 10px 20px;
 }
 .light-form-button{
-    background: #5fcf80;
+    background: #EC4C4C;
     border: 1px solid rgba(119, 81, 81, 0.34);
     width: 24%;
     padding: 10px 10px;
@@ -669,7 +669,7 @@ Footer
   transition: all 0.3s ease-in-out;
 }
 .btn-green, .btn-green:hover{
-    background-color: #5fcf80;
+    background-color: #EC4C4C;
     color: #fff;
 }
 .footer .form-control:focus{
@@ -707,7 +707,7 @@ Responsive media queries
     }
     .price-table .pricing-head h4 {
     font-size: 18px;
-    }   
+    }
 }
 @media (min-width: 20px) and (max-width: 450px) {
     .text-dec {
